<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/mission_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp">

        <TextView
            android:id="@+id/mission_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/small_mission_image"
            android:maxLines="1"
            android:text="@string/mission"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/small_mission_image"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:contentDescription="@string/image_icon" />
    </RelativeLayout>


    <TextView
        android:id="@+id/text_year"
        android:layout_width="@dimen/_70dp"
        android:layout_height="20dp"
        android:layout_below="@+id/mission_layout"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/year_one"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/text_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mission_layout"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/text_year"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/text_utc_date"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_year_value"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/utc_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/text_utc_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_year_value"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/text_utc_date"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/text_local_date"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_utc_date"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/local_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/text_local_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_utc_date"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/text_utc_date"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />


    <TextView
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_local_date"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/rocket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/border2"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:maxLines="1"
        android:text="@string/rocket"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rocket_id"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/rocket_id"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/rocket_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/text_utc_date"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/rocket_name"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket_id"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/rocket_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/rocket_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket_id_value"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/rocket_name"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/rocket_type"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket_name"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/rocket_type"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/rocket_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket_name_value"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/rocket_type"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/nationality"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket_type"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/launch_site"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/nationality_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rocket_type_value"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/nationality"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/manufacturer"
        android:layout_width="@dimen/_70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nationality"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/site_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:tint="#808080" />

    <TextView
        android:id="@+id/manufacturer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nationality_value"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/manufacturer"
        android:gravity="center"
        android:textSize="@dimen/_15sp" />

    <ImageView
        android:id="@+id/large_mission_image"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:layout_below="@+id/manufacturer_value"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/more_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/large_mission_image"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:text="@string/more_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/more_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/large_mission_image"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_toEndOf="@+id/more_details"
        android:text="@string/more_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/more_details_value"
        android:layout_marginTop="@dimen/_5dp"
        android:background="#808080" />
</RelativeLayout>
